@@ -38,6 +38,11 @@ Commons Collections is Java 5.
 Users are encouraged to upgrade to this version as, in addition to new
 features, this release includes numerous bug fixes.
   ">
+    <action issue="COLLECTIONS-495" dev="tn" type="fix">
+     "UnmodifiableTrie#unmodifiableTrie(Trie)" will not decorate again an already
+     unmodifiable Trie. Also the return type has been changed to "Trie" to be consistent
+     with other Unmodifiable decorators.
+    </action>
     <action issue="COLLECTIONS-494" dev="tn" type="update" due-to="Emmanuel Bourg">
      Moved "Equator" interface to base package for consistency.
     </action>
