@@ -47,6 +47,8 @@ Major changes since 3.2.1
 Changes since 4.0-alpha1
 ------------------------
 
+ o [COLLECTIONS-495] "UnmodifiableTrie#unmodifiableTrie(Trie)" will not decorate again an already unmodifiable Trie.
+                     Also the return type has been changed to "Trie" to be consistent with other Unmodifiable decorators.
  o [COLLECTIONS-494] Moved "Equator" interface to base package for consistency. Thanks to Emmanuel Bourg.
  o [COLLECTIONS-488] Added "CollectionsUtils#matchesAll(Iterable, Predicate)" to test if all elements
                      of a collection match a given predicate. Thanks to Josh Cain.
@@ -159,6 +161,8 @@ New features
 Changed classes / methods
 -------------------------
 
+ o [COLLECTIONS-495] "UnmodifiableTrie#unmodifiableTrie(Trie)" will not decorate again an already unmodifiable Trie.
+                     Also the return type has been changed to "Trie" to be consistent with other Unmodifiable decorators.
  o [COLLECTIONS-494] Moved "Equator" interface to base package for consistency. Thanks to Emmanuel Bourg.
  o [COLLECTIONS-485] Accept wildcard input where possible, e.g. in copy-constructors, Unmodifiable* decorators
                      and iterators. Thanks to Hollis Waite.
